# SinServer

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  pom.xml
src/main/cpp/: Config.h  main.cpp  websocket_server.cpp
src/main/cpp/dtos/: JsonHelper.h  MessageType.cpp  MessageType.h  Msg.h  Task.h
src/main/cpp/sin/: sin_handler.cpp  sin_handler.h
src/main/cpp/ws/: websocket_server.cpp  websocket_server.h
src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar  Dockerfile.native  Dockerfile.native-micro
src/main/java/com/example/server/dtos/: Msg.java  MsgType.java  Strategy.java  Task.java
src/main/java/com/example/server/id/: IdResource.java
src/main/java/com/example/server/sin/: InternalError.java  SinResource.java  SinService.java  SinSocket.java
src/main/java/com/example/server/strategy/: StrategyResource.java  StrategyService.java
src/main/java/com/example/sin/: InternalError.java  Msg.java  MsgType.java  SinService.java  SinSocket.java  Task.java
src/main/java/com/example/strategy/: Strategy.java  StrategyResource.java  StrategyService.java
src/main/resources/: application.properties
src/test/java/com/example/: StrategyResourceIT.java  StrategyResourceTest.java
src/test/java/com/example/server/: StrategyResourceIT.java  StrategyResourceTest.java
